:sparkles: Added simple CICD

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -19,13 +19,15 @@ jobs:
           ls
           cd Scripts
           ls
-          ./build.bat "../Aura/Aura.uproject" "../Aura/Build" "Win64"
+          ./build.bat "../Aura.uproject" "../Build" "Win64"
       - name: Download Butler
         run: |
           curl -o butler.zip https://broth.itch.ovh/butler/windows-amd64/LATEST/archive/default
           powershell Expand-Archive butler.zip
+
       - name: Publish the build Folder
         run: |
-          ./butler/butler.exe push .\Aura\Build\Windows tkd/test:win-64 --userversion ${{ github.ref_name }}
+          ls
+          ./butler/butler.exe push ./Build/Windows unitytakeda/aura:win-64
         env:
           BUTLER_API_KEY: hr529nh2oniv8nTVaYs4txXRCeZkllxuhtYwBJB7
